# workers

./: .gitignore  Cargo.toml  README.md
installers/: release-workers.sh
installers/debian/: README.md  build-debs.sh
installers/debian/assets/: manifeed-workers.desktop
installers/debian/assets/systemd/: manifeed-worker-source-embedding.service.template
installers/debian/debian/: changelog  control  copyright  rules
installers/debian/debian/.debhelper/manifeed-workers-desktop/: dbgsym-build-ids
installers/debian/debian/.debhelper/manifeed-workers-desktop/dbgsym-root/DEBIAN/: control  md5sums
installers/debian/debian/.debhelper/manifeed-workers-desktop/dbgsym-root/usr/share/doc/: manifeed-workers-desktop-dbgsym
installers/debian/scripts/: stage-onnx-runtime.sh  stage-packages.sh
installers/linux/worker-rss/: README.md  build-bundle.sh  install.sh
installers/linux/worker-source-embedding/: README.md  build-bundle.sh  install.sh
installers/macos/: README.md  build-app.sh  build-dmg.sh
installers/release/: read_manifest_value.py  smoke_test.py
installers/release/families/: desktop.sh  embedding.sh  rss.sh
installers/release/lib/: catalog.sh  common.sh  manifest.sh
manifeed-worker-common/: Cargo.toml
manifeed-worker-common/src/: api.rs  auth.rs  config.rs  diagnostics.rs  error.rs  gateway.rs  identity.rs  lib.rs  paths.rs  protocol.rs  release.rs  service.rs  status.rs  types.rs
worker-desktop/: CHANGELOG.md  Cargo.toml  README.md  build.rs  dev-live-preview.sh
worker-desktop/src/: worker_support.rs
worker-desktop/src/controller/: mod.rs  runtime.rs
worker-desktop/src/controller/core/: mod.rs  process_control.rs  refresh_service.rs  refresh_service_tests.rs  worker_actions.rs
worker-desktop/src/controller/state/: snapshot.rs
worker-desktop/src/controller/utils/: mod.rs  status.rs  status_tests.rs
worker-desktop/src/installer/: bundle.rs  config_state.rs  download.rs  mod.rs  rollback.rs  service_sync.rs  validation.rs
worker-desktop/src/process/: identity.rs  mod.rs  platform.rs
worker-desktop/ui/: app.slint
worker-desktop/ui/cards/: embedding-worker-card.slint  rss-worker-card.slint  settings-card.slint
worker-desktop/ui/components/: notice-banner.slint
worker-desktop/ui/controls/: app-combo-box.slint  app-line-edit.slint  app-spin-box.slint  combo-option-row.slint  step-button.slint
worker-desktop/ui/layout/: dashboard-layout-base.slint  dashboard-three-columns.slint
worker-desktop/ui/panels/: embedding-worker-panel.slint  rss-worker-panel.slint  settings-panel.slint
worker-rss/: Cargo.toml
worker-rss/src/: api.rs  config.rs  error.rs  feed.rs  gateway.rs  lib.rs  logging.rs  main.rs  model.rs  worker.rs
worker-rss/src/feed/: fetcher.rs  normalize.rs
worker-rss/src/feed/normalize/: author_patterns.rs  author_tokens.rs  authors.rs  authors_tests.rs  html.rs  media.rs  mod.rs  text.rs
worker-rss/src/worker/: runtime.rs  scheduling.rs
worker-source-embedding/: Cargo.toml
worker-source-embedding-desktop/: CHANGELOG.md  Cargo.toml  README.md  dev-live-preview.sh
worker-source-embedding-desktop/src/: app.rs  gpu.rs  helpers.rs  main.rs  pages.rs  process.rs  state.rs  theme.rs  widgets.rs  worker_support.rs
worker-source-embedding-desktop/src/controller/: bindings.rs  mod.rs  runtime.rs  state.rs  utils.rs
worker-source-embedding-desktop/src/controller/core/: bootstrap.rs  mod.rs  refresh_service.rs  settings_service.rs  snapshot_service.rs  snapshot_service_tests.rs  worker_service.rs
worker-source-embedding-desktop/src/controller/state/: mod.rs  notice.rs
worker-source-embedding-desktop/src/controller/utils/: modes.rs  notices.rs
worker-source-embedding-desktop/src/installer/: bundle.rs  mod.rs  runtime.rs  transaction.rs
worker-source-embedding-desktop/ui/: app.slint  theme.slint  view-types.slint
worker-source-embedding-desktop/ui/cards/: embedding-worker-card.slint  rss-worker-card.slint  settings-card.slint  worker-card-frame.slint
worker-source-embedding-desktop/ui/components/: card-shell.slint  editorial-button.slint  field-label.slint  status-indicator.slint
worker-source-embedding-desktop/ui/controls/: control-shell.slint
worker-source-embedding-desktop/ui/layout/: dashboard-header.slint  dashboard-layout-base.slint  dashboard-single-column.slint  dashboard-three-columns.slint  dashboard-two-columns.slint
worker-source-embedding/src/: api.rs  cli.rs  config.rs  error.rs  gateway.rs  huggingface.rs  lib.rs  main.rs  onnx.rs  runtime.rs  status.rs  worker.rs
worker-source-embedding/src/commands/: config.rs  doctor.rs  mod.rs  probe.rs  run.rs  service.rs  shared.rs  version.rs
worker-source-embedding/src/runtime/: bundle.rs  mod.rs  probe.rs  providers.rs  system.rs
