[package]
name = "manifeed-worker-common"
version = "0.1.4"
edition = "2021"

[dependencies]
base64.workspace = true
chrono = { workspace = true, features = ["serde"] }
directories.workspace = true
ed25519-dalek = { workspace = true, features = ["rand_core"] }
hex.workspace = true
hmac.workspace = true
hostname.workspace = true
rand_core = { workspace = true, features = ["getrandom"] }
reqwest = { workspace = true, features = ["blocking", "json", "rustls-tls"] }
semver.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["sync", "time"] }
uuid = { workspace = true, features = ["serde", "v4"] }
