[package]
name = "worker-rss"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
feed-rs = "2"
hmac = "0.12"
hex = "0.4"
html-escape = "0.2"
httpdate = "1"
manifeed-worker-common = { path = "../manifeed-worker-common" }
reqwest = { version = "0.12", default-features = false, features = ["brotli", "deflate", "gzip", "json", "rustls-tls"] }
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt"] }
unicode-normalization = "0.1"
uuid = { version = "1", features = ["v4"] }
