[package]
name = "worker-rss"
version = "0.1.3"
edition = "2021"

[package.metadata.manifeed.release]
family = "rss"
worker_version = "0.1.3"
artifact_version_linux_x86_64 = "0.1.3"
artifact_version_linux_aarch64 = "0.1.3"

[dependencies]
async-trait.workspace = true
chrono = { workspace = true, features = ["serde"] }
clap = { workspace = true, features = ["derive"] }
feed-rs.workspace = true
html-escape.workspace = true
httpdate.workspace = true
manifeed-worker-common = { path = "../manifeed-worker-common" }
reqwest = { workspace = true, features = ["brotli", "deflate", "gzip", "json", "rustls-tls"] }
regex.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "time"] }
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["fmt"] }
unicode-normalization.workspace = true
