[package]
name = "worker-source-embedding-desktop"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "manifeed-workers"
path = "src/main.rs"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
eframe = { version = "0.31", default-features = false, features = ["default_fonts", "glow", "wayland", "x11"] }
egui = "0.31"
manifeed-worker-common = { path = "../manifeed-worker-common" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
