[package]
name = "worker-source-embedding-desktop"
version = "0.1.1"
edition = "2021"
build = "build.rs"
readme = "README.md"

[package.metadata.manifeed.release]
family = "desktop"
artifact_version_linux_x86_64 = "0.1.1"
artifact_version_linux_aarch64 = "0.1.1"

[[bin]]
name = "manifeed-workers"
path = "src/main.rs"

[features]
default = []
live-preview = ["slint/live-preview"]

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
manifeed-worker-common = { path = "../manifeed-worker-common" }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
slint = { version = "1.15", default-features = false, features = ["accessibility", "backend-winit", "compat-1-2", "renderer-femtovg", "renderer-software"] }

[build-dependencies]
slint-build = "1.15"
