[package]
name = "worker-source-embedding"
version = "0.1.0"
edition = "2021"

[package.metadata.manifeed.release]
family = "embedding"
worker_version = "e5-large-v1"
artifact_version_linux_x86_64 = "0.1.0"
artifact_version_linux_aarch64 = "0.1.0"

[dependencies]
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
hmac = "0.12"
hex = "0.4"
manifeed-worker-common = { path = "../manifeed-worker-common" }
ort = { version = "2.0.0-rc.12", default-features = false, features = ["api-24", "load-dynamic", "ndarray", "std", "tls-rustls"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
thiserror = "2"
tokenizers = { version = "0.20", default-features = false, features = ["onig"] }
tokio = { version = "1", features = ["fs", "io-util", "macros", "rt-multi-thread", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt"] }
uuid = { version = "1", features = ["v4"] }
