[package]
name = "worker-source-embedding"
version = "0.1.4"
edition = "2021"

[package.metadata.manifeed.release]
family = "embedding"
worker_version = "e5-large-v1"
artifact_version_linux_x86_64 = "0.1.4"
artifact_version_linux_aarch64 = "0.1.4"

[dependencies]
async-trait.workspace = true
chrono = { workspace = true, features = ["serde"] }
clap = { workspace = true, features = ["derive"] }
manifeed-worker-common = { path = "../manifeed-worker-common" }
ort = { workspace = true, default-features = false, features = ["api-24", "load-dynamic", "ndarray", "std", "tls-rustls"] }
reqwest = { workspace = true, features = ["rustls-tls"] }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
thiserror.workspace = true
tokenizers = { workspace = true, default-features = false, features = ["onig"] }
tokio = { workspace = true, features = ["fs", "io-util", "macros", "rt-multi-thread", "time"] }
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["fmt"] }
